build/log/idf_py_stderr_output_11897
Command: make -j 10 all
In file included from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:1:
/home/fus/Documents/DO-AN-02/comDriver/spi/../../helper/general.h:71:24: warning: 'currentSystemMode' initialized and declared 'extern'
   71 | extern volatile flag_t currentSystemMode = -1;
      |                        ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/../../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:1:
/home/fus/Documents/DO-AN-02/comDriver/i2c/../../helper/general.h:71:24: warning: 'currentSystemMode' initialized and declared 'extern'
   71 | extern volatile flag_t currentSystemMode = -1;
      |                        ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/i2c/../../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.h:12:
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2cDefinition.h:45:5: error: redeclaration of enumerator 'I2C_SLAVE_SPEEDMODE0'
   45 |     I2C_SLAVE_SPEEDMODE0  = 7,  /// SLAVE mode  | INFINITY speed  (1 MHz)
      |     ^~~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2cDefinition.h:42:5: note: previous definition of 'I2C_SLAVE_SPEEDMODE0' with type 'int'
   42 |     I2C_SLAVE_SPEEDMODE0  = 4,  /// SLAVE mode  | STANDARD speed  (100 kHz)
      |     ^~~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:3:9: note: '#pragma message: i2c.c is compiling...'
    3 | #pragma message("i2c.c is compiling...")
      |         ^~~~~~~
make[2]: *** [esp-idf/i2c/CMakeFiles/__idf_i2c.dir/build.make:79: esp-idf/i2c/CMakeFiles/__idf_i2c.dir/i2c.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7522: esp-idf/i2c/CMakeFiles/__idf_i2c.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
